@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Fix bug with ignored opening brace in .X files with DeclData section. Thx @Alin for bugreport and patch.
 - Fix problem with OpenGL textures cache.
 - Add clear buffer flags and marked some methods used for clear buffers as deprecated.
 - Fix: CGUIImage no longer scales wrong when working with textures which don't have the original image size.
